WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183272
Some RealtimeMediaSource methods do not need to be marked as virtual
https://bugs.webkit.org/show_bug.cgi?id=183272
Summary
Some RealtimeMediaSource methods do not need to be marked as virtual
youenn fablet
Reported
2018-03-01 17:40:54 PST
Some RealtimeMediaSource methods do not need to be marked as virtual
Attachments
Patch
(2.73 KB, patch)
2018-03-01 17:41 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2018-03-01 17:41:47 PST
Created
attachment 334874
[details]
Patch
WebKit Commit Bot
Comment 2
2018-03-02 09:39:54 PST
Comment on
attachment 334874
[details]
Patch Clearing flags on attachment: 334874 Committed
r229176
: <
https://trac.webkit.org/changeset/229176
>
WebKit Commit Bot
Comment 3
2018-03-02 09:39:55 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-03-02 09:40:43 PST
<
rdar://problem/38071336
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug