Some RealtimeMediaSource methods do not need to be marked as virtual https://bugs.webkit.org/show_bug.cgi?id=183272

Patch by Youenn Fablet <youenn@apple.com> on 2018-03-02
Reviewed by Eric Carlson.

No change of behavior.

* platform/mediastream/RealtimeMediaSource.h:

Canonical link: https://commits.webkit.org/198959@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229176 268f45cc-cd09-0410-ab3c-d52691b4dbfc